# embedded-patterns

./: CMakeLists.txt  README.md
inc/: packet_parser.h  ring_buffer.h  tests.h  uart_driver.h
src/: packet_parser.c  ring_buffer.c  uart_driver.c
tests/: main.c  test_packet_parser.c  test_ring_buffer.c
